Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <blockquote>
                 <div class="row">
                   <div class="col-md-2 text-center hidden-xs hidden-sm">
-                    <img class="img-responsive" src="/theme/images/icons/mashhadlug.gif">
+                    <img class="img-responsive" src="https://alirezaarzehgar.github.io/www-mashhadlug/theme/images/icons/mashhadlug.gif">
                   </div>
                   <div class="col-md-10 ">
                     مشهدلاگ اجتماع آزادی از دوست‌داران گنو/لینوکس است که بیشتر در
