Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <blockquote>
                 <div class="row">
                   <div class="col-md-2 text-center hidden-xs hidden-sm">
-                    <img class="img-responsive" src="/theme/images/icons/wikipedia.png">
+                    <img class="img-responsive" src="https://alirezaarzehgar.github.io/www-mashhadlug/theme/images/icons/wikipedia.png">
                   </div>
                   <div class="col-md-10 ">
                     گروه کاربران لینوکس یا لاگ یک سازمان خصوصی، اغلب غیرانتفاعی
