Generate Pelican site

--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
 <p>برای ارتباط زنده با اعضای لاگ با استفاده از ابزار IRC مورد علاقه‌ی خود به کانال ‪#mashhadlug‬ در سرور irc.freenode.com متصل شوید. </p>
 <ul>
 <li>اگر با شبکه IRC آشنا نیستید و یا نحوه اتصال به یک سرور IRC را نمی‌دانید، مقالهٔ <a href="https://fa.wikipedia.org/wiki/%D8%A2%DB%8C%E2%80%8C%D8%A2%D8%B1%D8%B3%DB%8C">آی‌آر‌سی</a> را در ویکی‌پدیا مطالعه نمایید.</li>
-<li>در صورتی که تمایل به نصب نرم‌افزار خاصی ندارید، می‌توانید از طریق <a href="https://alirezaarzehgar.github.io/www-mashhadlug/irc.html">صفحه IRC در مشهدلاگ</a> با کانال IRC مشهدلاگ ارتباط برقرار کنید.</li>
+<li>در صورتی که تمایل به نصب نرم‌افزار خاصی ندارید، می‌توانید از طریق <a href="/irc.html">صفحه IRC در مشهدلاگ</a> با کانال IRC مشهدلاگ ارتباط برقرار کنید.</li>
 <li>در صورتی که از <a href="https://addons.mozilla.org/en-US/firefox/addon/chatzilla/">Chatzilla</a> و یا <a href="https://hexchat.github.io/">hexchat</a> برای اتصال به IRC استفاده می‌کنید، می‌توانید به راحتی از طریق <a href="irc://irc.freenode.org/#mashhadlug">لینک کانال IRC گروه کاربران لینوکس مشهد</a> به کانال IRC مشهدلاگ متصل شوید.</li>
 </ul>
 <h2>تماس با راهبران گروه</h2>
